--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.14.5
 chardet==4.0.0
 cryptography==3.4.5
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.0.7
 django-allauth==0.44.0
 django-ckeditor==6.0.0
@@ -23,3 +24,4 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
 urllib3==1.26.3
+whitenoise==5.2.0
